--- a/style.css
+++ b/style.css
@@ -53,3 +53,61 @@
     font-size: 20px;
     font-weight: 600;
 }
+
+/* Card section */
+.card-section {
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.card-section h4 {
+    color: rgb(88, 83, 83);
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.card-section h1 {
+    font-size: 48px;
+    font-weight: 700;
+    max-width: 55%;
+    margin: 0 auto 48px;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.card1 {
+    margin: 0 24px 64px;
+}
+
+.card1 img {
+    width: 100%;
+    margin-bottom: 32px;
+}
+
+.card1 button {
+    background-color: #52C30326;
+    padding: 14px 32px;
+    font-size: 24px;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+}
+
+.card1 h2 {
+    margin: 24px 0;
+}
+
+.card-btn {
+    padding: 21px 32px;
+    background-color: #52C303;
+    border-radius: 10px;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+}
